# memory-gateway

./: .env.example  .gitignore  .skillrc  Dockerfile  PLAN.md  README.md  database.py  highlight-memory.md  main.py  memory_extractor.py  pyproject.toml  tech-survey.md
.ospec/: SKILL.index.json  SKILL.md  asset-sources.json
.ospec/changes/active/phase1-architecture-refactor/: proposal.md  review.md  state.json  tasks.md  verification.md
.ospec/changes/archived/2026-06/2026-06-23/add-unit-tests/: proposal.md  (+4 more)
.ospec/docs/: SKILL.md
.ospec/docs/api/: README.md
.ospec/docs/design/: README.md
.ospec/docs/planning/: README.md
.ospec/docs/project/: api-overview.md  overview.md  tech-stack.md
.ospec/for-ai/: development-guide.md  naming-conventions.md  skill-conventions.md
docs/: todo.md  wire-service-layer-notes.md
docs/project/: architecture.md  module-map.md
middleware/: __init__.py  auth.py
repositories/: __init__.py  base.py  cache_repo.py  config_repo.py  conversation_repo.py  memory_repo.py  vector_repo.py
routes/: __init__.py  admin.py  chat.py  conversations.py  memories.py  partition.py  settings.py
scripts/: migrate_to_zvec.py
services/: __init__.py  cache_service.py  chat_service.py  config_service.py  conversation_service.py  extraction_service.py  memory_service.py
templates/: dashboard.html
tests/: conftest.py  test_database.py  test_main.py  test_memory_extractor.py  test_repositories.py  test_services.py
utils/: __init__.py  consolidation_helpers.py  embedding.py  memory_helpers.py  partition_cache.py  stream_helpers.py  text.py
