[project]
name = "ai-memory-gateway"
version = "0.1.0"
description = "轻量级 LLM 转发网关，带长期记忆系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "jieba>=0.42.1",
    "jinja2>=3.1.4",
]

[tool.uv]
# 生产环境不安装 dev 依赖
default-groups = ["dev"]

[dependency-groups]
dev = []
